# serializer version: 1
# name: test_cloud_all_sensors[sensor.geniushub_errors-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.geniushub_errors',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Errors',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'error',
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_Errors',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[sensor.geniushub_errors-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'error_list': list([
      ]),
      'friendly_name': 'GeniusHub Errors',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.geniushub_errors',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_cloud_all_sensors[sensor.geniushub_information-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.geniushub_information',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Information',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'information',
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_Information',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[sensor.geniushub_information-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GeniusHub Information',
      'information_list': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.geniushub_information',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_cloud_all_sensors[sensor.geniushub_warnings-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.geniushub_warnings',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Warnings',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'warning',
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_Warnings',
    'unit_of_measurement': None,
  })
# ---
# name: test_cloud_all_sensors[sensor.geniushub_warnings-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GeniusHub Warnings',
      'warning_list': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.geniushub_warnings',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_11_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.radiator_valve_11_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery-40',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_11',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_11_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Lounge',
      'device_class': 'battery',
      'friendly_name': 'Radiator Valve 11 Battery',
      'icon': 'mdi:battery-40',
      'state': dict({
        'set_temperature': 4,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.radiator_valve_11_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '43',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_56_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.radiator_valve_56_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery-50',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_56',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_56_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Kitchen',
      'device_class': 'battery',
      'friendly_name': 'Radiator Valve 56 Battery',
      'icon': 'mdi:battery-50',
      'state': dict({
        'set_temperature': 4,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.radiator_valve_56_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '55',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_68_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.radiator_valve_68_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery-90',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_68',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_68_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Hall',
      'device_class': 'battery',
      'friendly_name': 'Radiator Valve 68 Battery',
      'icon': 'mdi:battery-90',
      'state': dict({
        'set_temperature': 4,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.radiator_valve_68_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '92',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_78_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.radiator_valve_78_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery-40',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_78',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_78_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Bedroom',
      'device_class': 'battery',
      'friendly_name': 'Radiator Valve 78 Battery',
      'icon': 'mdi:battery-40',
      'state': dict({
        'set_temperature': 4,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.radiator_valve_78_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '42',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_85_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.radiator_valve_85_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery-60',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_85',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_85_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Study',
      'device_class': 'battery',
      'friendly_name': 'Radiator Valve 85 Battery',
      'icon': 'mdi:battery-60',
      'state': dict({
        'set_temperature': 4,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.radiator_valve_85_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '61',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_88_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.radiator_valve_88_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery-50',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_88',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_88_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Ensuite',
      'device_class': 'battery',
      'friendly_name': 'Radiator Valve 88 Battery',
      'icon': 'mdi:battery-50',
      'state': dict({
        'set_temperature': 4,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.radiator_valve_88_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '49',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_89_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.radiator_valve_89_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery-50',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_89',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_89_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Kitchen',
      'device_class': 'battery',
      'friendly_name': 'Radiator Valve 89 Battery',
      'icon': 'mdi:battery-50',
      'state': dict({
        'set_temperature': 4,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.radiator_valve_89_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '48',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_90_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.radiator_valve_90_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery-90',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_90',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.radiator_valve_90_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Guest room',
      'device_class': 'battery',
      'friendly_name': 'Radiator Valve 90 Battery',
      'icon': 'mdi:battery-90',
      'state': dict({
        'set_temperature': 4,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.radiator_valve_90_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '92',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_16_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.room_sensor_16_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_16',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_16_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Guest room',
      'device_class': 'battery',
      'friendly_name': 'Room Sensor 16 Battery',
      'icon': 'mdi:battery',
      'state': dict({
        'luminance': 29,
        'measured_temperature': 21,
        'occupancy_trigger': 255,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.room_sensor_16_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_17_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.room_sensor_17_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_17',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_17_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Ensuite',
      'device_class': 'battery',
      'friendly_name': 'Room Sensor 17 Battery',
      'icon': 'mdi:battery',
      'state': dict({
        'luminance': 32,
        'measured_temperature': 21,
        'occupancy_trigger': 0,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.room_sensor_17_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_18_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.room_sensor_18_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery-alert',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_18',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_18_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Bedroom',
      'device_class': 'battery',
      'friendly_name': 'Room Sensor 18 Battery',
      'icon': 'mdi:battery-alert',
      'state': dict({
        'luminance': 1,
        'measured_temperature': 21.5,
        'occupancy_trigger': 0,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.room_sensor_18_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '36',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_20_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.room_sensor_20_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_20',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_20_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Kitchen',
      'device_class': 'battery',
      'friendly_name': 'Room Sensor 20 Battery',
      'icon': 'mdi:battery',
      'state': dict({
        'luminance': 1,
        'measured_temperature': 21.5,
        'occupancy_trigger': 0,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.room_sensor_20_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_21_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.room_sensor_21_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_21',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_21_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Hall',
      'device_class': 'battery',
      'friendly_name': 'Room Sensor 21 Battery',
      'icon': 'mdi:battery',
      'state': dict({
        'luminance': 33,
        'measured_temperature': 21,
        'occupancy_trigger': 0,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.room_sensor_21_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_50_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.room_sensor_50_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_50',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_50_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Study',
      'device_class': 'battery',
      'friendly_name': 'Room Sensor 50 Battery',
      'icon': 'mdi:battery',
      'state': dict({
        'luminance': 34,
        'measured_temperature': 22,
        'occupancy_trigger': 0,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.room_sensor_50_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_53_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.room_sensor_53_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': 'mdi:battery-alert',
    'original_name': 'Battery',
    'platform': 'geniushub',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01J71MQF0EC62D620DGYNG2R8H_device_53',
    'unit_of_measurement': '%',
  })
# ---
# name: test_cloud_all_sensors[sensor.room_sensor_53_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assigned_zone': 'Lounge',
      'device_class': 'battery',
      'friendly_name': 'Room Sensor 53 Battery',
      'icon': 'mdi:battery-alert',
      'state': dict({
        'luminance': 0,
        'measured_temperature': 0,
        'occupancy_trigger': 0,
      }),
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.room_sensor_53_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '28',
  })
# ---
